# Modern-Librarys

./: .gitignore  CMakeLists.txt  LICENSE  README.md  UpdateLog.md
ConWeave-Library/: CMakeLists.txt
ConWeave-Library/Debugs/: main.cpp
ConWeave-Library/Execute/: main.cpp
ConWeave-Library/Export/: cw.ixx  cwlib.ixx  dast.ixx  sys.ixx
ConWeave-Library/Src/Error/: error_sentinel.ixx  system_errinfo.ixx
ConWeave-Library/Src/ErrorOut/: error.ixx
ConWeave-Library/Src/Filer/: access.ixx  basic_filer.ixx  filer.ixx  filoader.ixx  mapping_reader.ixx  mapping_writer.ixx  reader.ixx  writer.ixx
ConWeave-Library/Src/FixedVector/: basic_fixed_vec.ixx  fixed_vec_box.ixx  fixed_vec_core.ixx  fixed_vector.ixx
ConWeave-Library/Src/FixedVector/Impl/: basic_fixed_vec.ixx  fixed_vec_box.ixx  fixed_vec_core.ixx  fixed_vec_traits.ixx  impl.ixx
ConWeave-Library/Src/String/: basic_string.ixx  string.ixx  string_box.ixx  string_context.ixx  string_core.ixx  string_traits.ixx
ConWeave-Library/Src/String/Impl/: basic_string.ixx  impl.ixx  string_box.ixx  string_context.ixx  string_core.ixx  string_traits.ixx
ConWeave-Library/Src/Utility/: bitinfo.ixx  character.ixx  imut_data.ixx  match.ixx  utility.ixx
ConWeave-Library/Src/Vector/: basic_vector.ixx  vector.ixx  vector_box.ixx  vector_core.ixx  vector_traits.ixx
ConWeave-Library/Src/Vector/Impl/: basic_vector.ixx  impl.ixx  vector_box.ixx  vector_core.ixx  vector_traits.ixx
ConWeave-Library/Src/Wrap/: char_wrap.ixx
Describes/: ClassInterface.md  DevStandard.md  Development (A).lnk  ImplationFile.md  License.md  Namespace.md  Rejoice.md  UpdateLog.md
Describes/Filer/: ClassInterface-Filer.md  UpdateLog-Filer.md
Describes/FixedVector/: ClassInterface-FixedVector.md  Future-FixedVector.md  ImplationFile-FixedVector.md  UpdateLog-FixedVector.md
Describes/MainReadMe/: README_CHINESE.md
Describes/String/: Base-String.md  ClassInterface-String.md  Future-String.md  ImplationFile-String.md  UpdateLog-String.md
Describes/Utility/: ImplationFile.md
Describes/Vector/: ClassInterface-Vector.md  DefectReport-Vector.md  Future-Vector.md  ImplationFile-Vector.md  UpdateLog-Vector.md
ML/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ModernLibrary.sln  ModernLibrary.vcxproj  ModernLibrary.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
ModernLibrary/: ModernLibrary.sln
ModernLibrary/Execute/: main.cpp
ModernLibrary/ModernLibrary/: ModernLibrary.vcxproj  ModernLibrary.vcxproj.filters  main.cpp  main.ixx
ModernLibrary/ModernLibrary/x64/Debug/: cstring_D8890F20ED78C327.ifc.dt  cstring_D8890F20ED78C327.ifc.dt.command  cstring_D8890F20ED78C327.ifc.dt.d.json  cstring_D8890F20ED78C327.ifc.dt.module.json  cstring_D8890F20ED78C327.ifc.dt.module.json.command  main.ixx.ifc.dt.d.json  main.ixx.ifc.dt.module.json  main.ixx.ifc.dt.module.json.command  string.ixx.ifc.dt  string.ixx.ifc.dt.command  string.ixx.ifc.dt.d.json  string.ixx.ifc.dt.module.json  string.ixx.ifc.dt.module.json.command  type_traits_F0D32920C913187.ifc.dt  type_traits_F0D32920C913187.ifc.dt.command  type_traits_F0D32920C913187.ifc.dt.d.json  type_traits_F0D32920C913187.ifc.dt.module.json  type_traits_F0D32920C913187.ifc.dt.module.json.command
ModernLibrary/ModernLibrary/x64/Debug/microsoft/STL/: std.compat.ixx.ifc.dt.d.json  std.compat.ixx.ifc.dt.module.json  std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.command  std.ixx.ifc.dt.d.json  std.ixx.ifc.dt.module.json  std.ixx.ifc.dt.module.json.command
ModernLibrary/Src/: string.ixx
ModernLibrary/Src/FixedVector/: basic_fixed_vec.ixx  fixed_vec_box.ixx  fixed_vec_core.ixx  fixed_vec_traits.ixx  fixed_vector.ixx
ModernLibrary/Src/String/: basic_string.ixx  string.ixx  string_box.ixx  string_core.ixx  string_traits.ixx
ModernLibrary/Src/Utility/: adder.ixx  bitinfo.ixx  character.ixx  match.ixx  type_restion.ixx  utility.ixx
ModernLibrary/Src/Vector/: vector_box.ixx  vector_traits.ixx
ModernLibrary/Src/Wrap/: char_wrap.ixx
PerformanceReport/: README.md  TestStandard.md
PerformanceReport/String/: README.md  insert.md
